# chatbot

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
src/: main.py  server_endpoints.py
src/backend/: main.py
tests/: test_main.py
