[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "chatbot"
version = "0.1.0"
description = "Conversational chatbot"
#readme = "README.md"
requires-python = "==3.12.10"
authors = [
  { name = "Nagaraju Javisetty", email = "nagajavisetty143@gmail.com" }
]

dependencies = [
  # Backend dependencies
 "fastapi==0.128.0",
    "ragflow-sdk== 0.22.1",
    "uvicorn== 0.40.0"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.urls]
Homepage = "https://example.com/chatbot"
